--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,101 +1,29 @@
-html {
-    font-size: 13.33333vw
-}
-
-@media screen and (max-width: 320px) {
-    html {
-        font-size: 42.667PX;
-        font-size: 13.33333vw
+.ell{
+    overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .ell2{
+    word-break: break-all;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+  }
+  .clr {
+    &:after {
+        clear: both;
+        content: '.';
+        display: block;
+        height: 0;
+        line-height: 0;
+        overflow: hidden;
     }
-}
-
-@media screen and (min-width: 321px) and (max-width:360px) {
-    html {
-        font-size: 48PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 361px) and (max-width:375px) {
-    html {
-        font-size: 50PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 376px) and (max-width:393px) {
-    html {
-        font-size: 52.4PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 394px) and (max-width:412px) {
-    html {
-        font-size: 54.93PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 413px) and (max-width:414px) {
-    html {
-        font-size: 55.2PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 415px) and (max-width:480px) {
-    html {
-        font-size: 64PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 481px) and (max-width:540px) {
-    html {
-        font-size: 72PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 541px) and (max-width:640px) {
-    html {
-        font-size: 85.33PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 641px) and (max-width:720px) {
-    html {
-        font-size: 96PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 721px) and (max-width:768px) {
-    html {
-        font-size: 102.4PX;
-        font-size: 13.33333vw
-    }
-}
-
-@media screen and (min-width: 769px) {
-     html {
-        font-size: 102.4PX;
-        #app {
-            width: 768PX;
-            margin: 0 auto
-        }
-    }
-}
-
-.clearfix:after {
-    display: block;
-    clear: both;
-    content: "";
-    visibility: hidden;
-    height: 0
-}
+  
+    *height: 1%;
+  }
 input,button,select,textarea{outline:none}
 
 /* page change */
